package co.edu.uniquindio.proyecto.domain.valueObject.enums;

public enum AccionHistorial {
    REGISTRAR_SOLICITUD,
    CLASIFICAR_SOLICITUD,
    PRIORIZAR_SOLICITUD,
    ASIGNAR_RESPONSABLE,
    MARCAR_ATENDIDA,
    CERRAR_SOLICITUD,

// Opcional si se implementa IA.
//    SUGERENCIA_IA_GENERADA,
//    SUGERENCIA_IA_CONFIRMADA,
//    SUGERENCIA_IA_AJUSTADA,
//    RESUMEN_IA_GENERADO
}
