package co.edu.uniquindio.proyecto.domain.valueobject.enums;

public enum CanalOrigen {
    PRESENCIAL,
    TELEFONICO,
    CORREO_ELECTRONICO,
    APLICACION_WEB,
    APLICACION_MOVIL
}