package co.edu.uniquindio.proyecto.domain.valueobject.enums;

public enum Rol {
    ESTUDIANTE,
    PROFESOR,
    ADMINISTRATIVO,
    COORDINADOR
}