package co.edu.uniquindio.proyecto.domain.valueobject.enums;

public enum TipoSolicitud {
    QUEJA,
    RECLAMO,
    SUGERENCIA,
    PETICION,
    FELICITACION
}